--- a/src/main/webapp/app/components/home/sidebar/SidebarView.html
+++ b/src/main/webapp/app/components/home/sidebar/SidebarView.html
@@ -41,7 +41,7 @@
                 <div class="well well-small">
                     <h4 id="follow-suggest-title">
                         <span class="glyphicon glyphicon-random"></span>
-                        &nbsp;Who To Follow?
+                        &nbsp;Who To Follow
                     </h4>
                     <div class="items">
                     </div>
