--- a/src/main/webapp/app/components/account/preferences/PreferenceView.html
+++ b/src/main/webapp/app/components/account/preferences/PreferenceView.html
@@ -1,47 +1,49 @@
-<form class="form-horizontal row-fluid" ng-controller="PreferenceController">
-    <h2>
-        Preferences
-    </h2>
+<div ng-controller="PreferenceController">
+    <form class="form-horizontal row-fluid">
+        <h2>
+            Preferences
+        </h2>
 
-    <legend>
-        Notifications
-    </legend>
+        <legend>
+            Notifications
+        </legend>
 
-    <div ng-if="false">hi</div>
+        <div ng-if="false">hi</div>
 
-    <div class="control-group">
-        <div class="controls" ng-model="prefs.mentionEmail">
-            <label class="checkbox">
-                <input name="mentionEmail" type="checkbox"> Get notified by e-mail when you are mentioned
-            </label>
+        <div class="control-group">
+            <div class="controls" ng-model="prefs.mentionEmail">
+                <label class="checkbox">
+                    <input name="mentionEmail" type="checkbox" ng-checked="prefs.mentionEmail"> Get notified by e-mail when you are mentioned
+                </label>
+            </div>
+            <div class="controls" ng-model="prefs.dailyDigest">
+                <label class="checkbox">
+                    <input name="dailyDigest" type="checkbox" ng-checked="prefs.dailyDigest"> Get a daily digest e-mail
+                </label>
+            </div>
+            <div class="controls" ng-model="prefs.weeklyDigest">
+                <label class="checkbox">
+                    <input name="weeklyDigest" type="checkbox" ng-checked="prefs.weeklyDigest"> Get a weekly digest e-mail
+                </label>
+            </div>
+            <div class="controls" ng-model="prefs.rssUidActive">
+                <label class="checkbox">
+                    <input name="rssUidActive" type="checkbox" ng-checked="prefs.rssUidActive">  Allow RSS feed publication of your timeline
+                </label>
+                <a ng-if="prefs.rssUidActive" href="/tatami/syndic/{{prefs.rssUid}}">Link to your timeline RSS stream </a>
+
+            </div>
         </div>
-        <div class="controls" ng-model="prefs.dailyDigest">
-            <label class="checkbox">
-                <input name="dailyDigest" type="checkbox"> Get a daily digest e-mail
-            </label>
-        </div>
-        <div class="controls" ng-model="prefs.weeklyDigest">
-            <label class="checkbox">
-                <input name="weeklyDigest" type="checkbox"> Get a weekly digest e-mail
-            </label>
-        </div>
-        <div class="controls" ng-model="prefs.rssUidActive">
-            <label class="checkbox">
-                <input name="rssUidActive" type="checkbox">  Allow RSS feed publication of your timeline
-            </label>
-            <a ng-if="prefs.rssUidActive" href="/tatami/syndic/{{prefs.rssUid}}">Link to your timeline RSS stream </a>
-
-        </div>
-    </div>
 
 
-    <fieldset>
-        <div class="return"></div>
-        <div class="form-actions">
-            <button type="submit" class="input-xlarge btn btn-primary btn-block" ng-click="savePrefs()">
-                Save
-            </button>
-        </div>
-    </fieldset>
+        <fieldset>
+            <div class="return"></div>
+            <div class="form-actions">
+                <button type="submit" class="input-xlarge btn btn-primary btn-block" ng-click="savePrefs()">
+                    Save
+                </button>
+            </div>
+        </fieldset>
 
-</form>
+    </form>
+</div>
