--- a/src/main/webapp/app/components/home/status/StatusView.html
+++ b/src/main/webapp/app/components/home/status/StatusView.html
@@ -1,116 +1,212 @@
+<div>
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancel()">&times;</button>
+        <h4 class="modal-title" translate="tatami.status.update"></h4>
+    </div>
+    <div class="modal-body">
+        <a ng-click="current.preview = !current.preview" class="edit-tatam-float-right">
+            <i ng-if="current.preview" class="glyphicon glyphicon-edit close" title="{{tatami.status.editor | translate}}"></i>
+            <i ng-if="!current.preview" class="glyphicon glyphicon-eye-open close" title="{{tatami.status.preview | translate}}"></i>
+        </a>
+        <fieldset ng-if="!current.preview" class="edit-tatam row-fluid">
+            <textarea ng-model="status.content" ng-change="statusChange(status.content)" placeholder="{{ 'tatami.status.update' | translate}}" maxlength="750" rows="5" required="required"></textarea>
+            <div>
+                <em>
+                    {{'tatami.status.characters.left' | translate}}
+                    <span class="countstatus badge">{{750-status.content.length}}</span>
+                </em>
+                <a href="https://help.github.com/articles/markdown-basics/" translate="tatami.status.markdown"></a>
+            </div>
+        </fieldset>
+        <fieldset ng-if="current.preview" class="preview-tatam row-fluid">
+            <div class="well well-small markdown" ng-bind-html="status.content | markdown"></div>
+        </fieldset>
+        <fieldset ng-show="current.reply" class="reply row-fluid">
+            <legend translate="tatami.status.reply">
 
-<div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancel()">&times;</button>
-    <h4 class="modal-title" translate="tatami.status.update"></h4>
-</div>
-<div class="modal-body">
-    <a ng-click="current.preview = !current.preview" class="edit-tatam-float-right">
-        <i ng-if="current.preview" class="glyphicon glyphicon-edit close" title="{{tatami.status.editor | translate}}"></i>
-        <i ng-if="!current.preview" class="glyphicon glyphicon-eye-open close" title="{{tatami.status.preview | translate}}"></i>
-    </a>
-    <fieldset ng-if="!current.preview" class="edit-tatam row-fluid">
-        <textarea ng-model="status.content" ng-change="statusChange(status.content)" placeholder="{{ 'tatami.status.update' | translate}}" maxlength="750" rows="5" required="required"></textarea>
-        <em>
-            {{'tatami.status.characters.left' | translate}}
-            <span class="countstatus badge">{{750-status.content.length}}</span>
-        </em>
-    </fieldset>
-    <fieldset ng-if="current.preview" class="preview-tatam row-fluid">
-        <div class="well well-small markdown" ng-bind-html="status.content | markdown"></div>
-    </fieldset>
-    <fieldset ng-show="current.reply" class="reply row-fluid">
-        <legend translate="tatami.status.reply">
+            </legend>
+            <!-- Start of reply section -->
+            <!--
+            <div style="display: block;" class="tatam pointer discussion tatam-border-lr tatam-hover tatam-id-{{ status.statusId }}" ng-show="false">
+                <div id="before">
+                </div>
+                <div id="current" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false" ng-class="{ 'favorite' : status.favorite, 'share' : status.shareByMe }">
+                    <div class="pull-left background-image-fffix statusitem-img">
+                        <div class="img img-rounded img-medium" ng-style="{ 'background-image': status.avatar=='' ? 'url(/img/default_image_profile.png)' : 'url(/tatami/avatar/' + status.avatar + '/photo.jpg)' }"></div>
+                    </div>
+                    <div id="status-content-container">
+                        <div class="pull-right text-right">
+                            <abbr title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY'}}" am-time-ago="status.statusDate"></abbr>
+                            -->
+                            <!-- Make status abbr month and day display after 24h have passed? -->
+            <!--
+                        </div>
+                        <h5 class="statusitem-name">
+                            <strong><a href="#users/{{ status.username }}">{{status.firstName + ' ' + status.lastName}}</a></strong>
+                            <small><a href="#users/{{ status.username }}">@{{ status.username }}</a></small>
+                        </h5>
+                        <div class="markdown" ng-bind-html="status.content | markdown"></div>
 
-        </legend>
-        <div class="tatam-reply"/>
-    </fieldset>
-    <fieldset class="row-fluid">
-        <legend translate="tatami.status.options">
+                        <small ng-show="status.groupId">
+                            <a class="label" ng-class="status.publicGroup ? 'label-info' : 'label-warning'" ng-href="#groups/{{ status.groupId }}">
+                                {{ status.groupName }}
+                            </a>
+                            <br>
+                        </small>
 
-        </legend>
-        <div>
-            <label>
-                <input type="checkbox" ng-model="current.geoLoc" ng-change="updateLocation()"><span class="glyphicon glyphicon-map-marker" translate="tatami.status.geoLocalization">
-                                </span>
+                        <small ng-show="status.statusPrivate">
+                            <span class="glyphicon glyphicon-lock"></span>
+                            <span translate="tatami.status.private"></span>
+                            <br>
+                        </small>
 
-            </label>
-            <div ng-if="current.geoLoc">
-                <!-- Was width:250px, changed it to 500 -->
-                <div id="simpleMap" style="height:250px; width:500px"></div>
-                <div class="geolocMap">
+                        <small ng-show="status.replyTo">
+                            <span class="glyphicon glyphicon-share-alt"></span>
+                            <span translate="tatami.status.replyto"></span>
+                            <a ng-href="#status/{{ status.replyTo }}">@{{ status.replyToUsername }}</a>
+                            <br>
+                        </small>
+
+                        <small>
+                            <div class="attachments">
+                                <div>
+                                                    <span ng-repeat="attachment in status.attachments">
+                                                    <a href="/tatami/file/{{ attachment.attachmentId }}/{{ attachment.filename }}" class="btn-link status-action" target="_blank">
+                                                        <i class="glyphicon glyphicon-file"></i> {{ attachment.filename }}
+                                                    </a>
+                                                    </span>
+                                </div>
+                            </div>
+                            <div id="share">
+                            </div>
+                        </small>
+                    </div>
+
+                    <div id="geolocalizationInStatus">
+                    </div>
+                    <div id="preview">
+                    </div>
+
+                    <div ng-style="{ visibility : showButtonRow ? 'visible' : 'hidden' }" style="display: block;" id="buttons" class="mediumHeight little-marge-top">
+                        <div>
+                            <small class="statusitem-footer">
+                                <a href="#status/{{ status.statusId }}" class="btn-link status-action button-ios">
+                                    <i class="glyphicon glyphicon-eye-open"></i>
+                                    <span translate="tatami.status.view"></span>
+                                </a>
+                                <button class="btn-link status-action status-action-reply button-ios" ng-controller="StatusManagerController">
+                                    <i class="glyphicon glyphicon-comment"></i>
+                                    <span translate="tatami.status.reply" ng-click="showModal()"></span>
+                                </button>
+                                <button ng-if="status.username == profile.username" class="btn-link status-action status-action-delete button-ios">
+                                    <i class="glyphicon glyphicon-trash"></i>
+                                    <span translate="tatami.status.delete"></span>
+                                </button>
+                                <button ng-if="status.username != profile.username && !status.shareByMe" class="btn-link status-action status-action-share button-ios">
+                                    <i class="glyphicon glyphicon-retweet"></i>
+                                    <span translate="tatami.status.share"></span>
+                                </button>
+                                <button class="btn-link status-action status-action-favorite button-ios">
+                                    <i class="glyphicon glyphicon-star"></i>
+                                    <span translate="tatami.status.favorite"></span>
+                                </button>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div id="after">
                 </div>
             </div>
-        </div>
-        <div>
-            <label class="control-label" translate="tatami.group.name"></label>
-            <select ng-model="status.groupId" ng-options="group.groupId as group.name for group in current.groups">
-                <option></option>
-            </select>
-        </div>
-        <!--
-        <div class="controls groups">
-            <div id="GeolocImpossible"></div> <p></p>
-            <div data-toggle="collapse" >
-                <div class="controls geoLocalization" >
-                    <label class="checkbox">
-                        <input type="checkbox"> <span class="glyphicon glyphicon-map-marker"></span> <fmt:message key="tatami.status.geoLocalization"/>
-                    </label>
-                </div>
-                <div id="geolocalisationCheckbox" ng-if="current.geoLoc">
-                    <div id="basicMap" style="height:250px; width:250px"></div>
+            -->
+        </fieldset>
+        <fieldset class="row-fluid">
+            <legend translate="tatami.status.options">
+
+            </legend>
+            <div>
+                <label>
+                    <input type="checkbox" ng-model="current.geoLoc" ng-change="updateLocation()"><span class="glyphicon glyphicon-map-marker" translate="tatami.status.geoLocalization">
+                                    </span>
+
+                </label>
+                <div ng-if="current.geoLoc">
+                    <!-- Was width:250px, changed it to 500 -->
+                    <div id="simpleMap" style="height:250px; width:500px"></div>
                     <div class="geolocMap">
                     </div>
                 </div>
             </div>
-            <label class="control-label"><fmt:message key="tatami.group.name"/></label>
-            <select name="groupId">
-                <option value=""></option>
-                <option value="<@= groups[index].groupId @>">
-                </option>
-            </select>
-        </div>-->
-        <div class="controls status-files">
-            <label translate="tatami.menu.files">
-
-            </label>
-            <div class="attachmentBar progress progress-striped active" style="display: none;">
-                <div class="bar progress-bar progress-bar-info" style="width: 0%;"></div>
+            <div>
+                <label class="control-label" translate="tatami.group.name"></label>
+                <select ng-model="status.groupId" ng-options="group.groupId as group.name for group in current.groups">
+                    <option></option>
+                </select>
             </div>
-            <div class="dropzone well" file-dropzone translate="tatami.status.drop.file">
+            <!--
+            <div class="controls groups">
+                <div id="GeolocImpossible"></div> <p></p>
+                <div data-toggle="collapse" >
+                    <div class="controls geoLocalization" >
+                        <label class="checkbox">
+                            <input type="checkbox"> <span class="glyphicon glyphicon-map-marker"></span> <fmt:message key="tatami.status.geoLocalization"/>
+                        </label>
+                    </div>
+                    <div id="geolocalisationCheckbox" ng-if="current.geoLoc">
+                        <div id="basicMap" style="height:250px; width:250px"></div>
+                        <div class="geolocMap">
+                        </div>
+                    </div>
+                </div>
+                <label class="control-label"><fmt:message key="tatami.group.name"/></label>
+                <select name="groupId">
+                    <option value=""></option>
+                    <option value="<@= groups[index].groupId @>">
+                    </option>
+                </select>
+            </div>-->
+            <div class="controls status-files">
+                <label translate="tatami.menu.files">
 
+                </label>
+                <div class="attachmentBar progress progress-striped active" style="display: none;">
+                    <div class="bar progress-bar progress-bar-info" style="width: 0%;"></div>
+                </div>
+                <div class="dropzone well" file-dropzone translate="tatami.status.drop.file">
+
+                </div>
+
+                <input style="display: none;" class="updateStatusFileupload" type="file" name="uploadFile" data-url="/tatami/rest/fileupload" multiple/>
+                <div class="fileUploadResults wrap">
+
+                </div>
             </div>
-
-            <input style="display: none;" class="updateStatusFileupload" type="file" name="uploadFile" data-url="/tatami/rest/fileupload" multiple/>
-            <div class="fileUploadResults wrap">
-
+            <!--
+            <label class="control-label"></label>
+            <div class="controlsIE">
+                <span class="hidden-label choose-label"><fmt:message key="tatami.user.upload.choose" /></span>
+                <p><fmt:message key="tatami.user.upload.buttonIE-ok" /></p>
+                <input id="tatamFile" type="file" name="uploadFile" data-url="/tatami/rest/fileuploadIE" class="filestyle" data-classButton="btn btn-primary" data-input="false" data-buttonText="" data-icon="false"/>
+                <span class="glyphicon glyphicon-search ok-ko"></span>
+                <div class="fileUploadResults wrap">
+                    <span class="upload-ko">
+                        <fmt:message key="tatami.user.upload.buttonIE-ko" />
+                    </span>
+                </div>
+                -->
+            <div class="controls status-private">
+                <label class="checkbox">
+                    <input ng-model="status.statusPrivate" id="statusPrivate" name="statusPrivate" type="checkbox" value="true">
+                    <span class="glyphicon glyphicon-lock" translate="tatami.status.private"></span>
+                </label>
             </div>
-        </div>
-        <!--
-        <label class="control-label"></label>
-        <div class="controlsIE">
-            <span class="hidden-label choose-label"><fmt:message key="tatami.user.upload.choose" /></span>
-            <p><fmt:message key="tatami.user.upload.buttonIE-ok" /></p>
-            <input id="tatamFile" type="file" name="uploadFile" data-url="/tatami/rest/fileuploadIE" class="filestyle" data-classButton="btn btn-primary" data-input="false" data-buttonText="" data-icon="false"/>
-            <span class="glyphicon glyphicon-search ok-ko"></span>
-            <div class="fileUploadResults wrap">
-                <span class="upload-ko">
-                    <fmt:message key="tatami.user.upload.buttonIE-ko" />
-                </span>
-            </div>
-            -->
-        <div class="controls status-private">
-            <label class="checkbox">
-                <input ng-model="status.statusPrivate" id="statusPrivate" name="statusPrivate" type="checkbox" value="true">
-                <span class="glyphicon glyphicon-lock" translate="tatami.status.private"></span>
-            </label>
-        </div>
-    </fieldset>
-</div>
-<div class="modal-footer">
-    <a class="btn" data-dismiss="modal" aria-hidden="true" ng-click="cancel()" translate="tatami.form.cancel">
+        </fieldset>
+    </div>
+    <div class="modal-footer">
+        <a class="btn" aria-hidden="true" ng-click="closeModal()" translate="tatami.form.cancel">
 
-    </a>
-    <span class="hidden-label submit-label"><fmt:message key="tatami.form.save"/></span>
-    <span class="hidden-label tatam-mandatory"><fmt:message key="tatami.tatam.mandatory"/></span>
-    <input ng-click="newStatus()" type="submit" class="btn btn-primary submit" data-buttonText="">
+        </a>
+        <span class="hidden-label submit-label" translate="tatami.form.post"></span>
+        <span class="hidden-label tatam-mandatory" translate="tatami.tatam.mandatory"></span>
+        <input ng-click="newStatus()" type="submit" class="btn btn-primary submit" value="{{ 'tatami.form.post' | translate }}">
+    </div>
 </div>
