--- a/src/main/webapp/app/components/home/sidebar/SidebarView.html
+++ b/src/main/webapp/app/components/home/sidebar/SidebarView.html
@@ -49,9 +49,11 @@
 								<!-- This is avatar thing is in here but for some reason it doesn't show up on apps.tatamisoft.com ? -->
 								<!-- Maybe this should be removed? -->
 								<!-- Try getting it to display and see how it looks -->
+                                <!--
 								<div class="pull-left background-image-fffix">
-									<div class="img img-rounded img-small" style="background-image: url(/tatami/avatar/e30263b0-5d7c-11e4-b72f-fe54008898dc/photo.jpg);"></div>
+									<div class="img img-rounded img-small" style="background-image: url(/img/default_image_profile.png);"></div>
 								</div>
+								-->
 								<h6>
 									<span class="toggleFriend pointer pull-right label">
 									<span class="glyphicon glyphicon-plus"></span>
