--- a/src/main/webapp/app/components/home/status/StatusView.html
+++ b/src/main/webapp/app/components/home/status/StatusView.html
@@ -23,7 +23,7 @@
             <div class="well well-small markdown" ng-bind-html="status.content | markdown"></div>
         </fieldset>
         <fieldset ng-show="current.reply" class="reply row-fluid">
-            <legend translate="tatami.status.reply">
+            <legend translate="tatami.status.statusReply">
 
             </legend>
             <!-- Start of reply section -->
@@ -71,11 +71,11 @@
                         <small>
                             <div class="attachments">
                                 <div>
-                                                    <span ng-repeat="attachment in status.attachments">
-                                                    <a href="/tatami/file/{{ attachment.attachmentId }}/{{ attachment.filename }}" class="btn-link status-action" target="_blank">
-                                                        <i class="glyphicon glyphicon-file"></i> {{ attachment.filename }}
-                                                    </a>
-                                                    </span>
+                                    <span ng-repeat="attachment in status.attachments">
+                                    <a href="/tatami/file/{{ attachment.attachmentId }}/{{ attachment.filename }}" class="btn-link status-action" target="_blank">
+                                        <i class="glyphicon glyphicon-file"></i> {{ attachment.filename }}
+                                    </a>
+                                    </span>
                                 </div>
                             </div>
                             <div id="share">
@@ -126,7 +126,7 @@
             <legend translate="tatami.status.options">
 
             </legend>
-            <div>
+            <div ng-show="!current.reply">
                 <label>
                     <input type="checkbox" ng-model="current.geoLoc" ng-change="updateLocation()"><span class="glyphicon glyphicon-map-marker" translate="tatami.status.geoLocalization">
                                     </span>
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div ng-show="!current.reply">
                 <label class="control-label" translate="tatami.group.name"></label>
                 <select ng-model="status.groupId" ng-options="group.groupId as group.name for group in current.groups">
                     <option></option>
@@ -196,7 +196,7 @@
                     </span>
                 </div>
                 -->
-            <div class="controls status-private">
+            <div ng-show="!current.reply" class="controls status-private">
                 <label class="checkbox">
                     <input ng-model="status.statusPrivate" id="statusPrivate" name="statusPrivate" type="checkbox" value="true">
                     <span class="glyphicon glyphicon-lock" translate="tatami.status.private"></span>
