Removed ng-init

--- a/src/main/webapp/app/components/home/status/StatusView.html
+++ b/src/main/webapp/app/components/home/status/StatusView.html
@@ -1,4 +1,4 @@
-<div ng-init="replyTo()">
+<div>
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closeModal()">&times;</button>
         <h4 class="modal-title" translate="tatami.status.update"></h4>
