Added skeleton of tags, which includes translation configs, andimplementation of one of the three tabs (the three all together are likely dependent on routing). Similar implementation completed for groups

--- a/src/main/webapp/app/components/account/groups/GroupView.html
+++ b/src/main/webapp/app/components/account/groups/GroupView.html
@@ -74,6 +74,9 @@
         </div>
 
         <div>
+            <form class="row-fluid littleMargeBot">
+                <input ng-show="tab.searchTab" id="block_filter" type="text" class="search-query col-span-12" name="result_filter" autocomplete="off" placeholder="Enter your search">
+            </form>
             <table class="table noCollapse">
                 <tbody>
                     <tr>
